<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:visibility="visible">
	<!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		login_1
     *	@date 		Saturday 02nd of March 2024 02:47:08 PM
     *	@title 		Page 2
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
	<ScrollView
		android:id="@+id/login_1"
		android:layout_width="wrap_content"
		android:layout_height="match_parent">

		<RelativeLayout
			android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">


			<RelativeLayout
				android:id="@+id/page_login_1_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp">

				<View
					android:id="@+id/_bg__login_1_ek2"
					android:layout_width="390dp"
					android:layout_height="844dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__login_1_ek2_shape" />

				<TextView
					android:id="@+id/____________________________"
					android:layout_width="309.8dp"
					android:layout_height="30.8dp"
					android:layout_marginLeft="24dp"
					android:layout_marginTop="114dp"
					android:text="@string/_____________________________string"
					android:textColor="@color/black"
					android:textSize="18sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/________"
					android:layout_width="355.4dp"
					android:layout_height="23.4dp"
					android:layout_marginLeft="24dp"
					android:layout_marginTop="147dp"
					android:text="@string/_________string"
					android:textColor="#000000"
					android:textSize="14sp" />


				<RelativeLayout
					android:id="@+id/buttons"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="24dp"
					android:layout_marginTop="742dp">

					<View
						android:id="@+id/_bg__buttons_ek1"
						android:layout_width="342dp"
						android:layout_height="60dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/_bg__buttons_ek1_shape" />


					<RelativeLayout
						android:id="@+id/group_8"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp">

						<View
							android:id="@+id/_bg__group_8_ek1"
							android:layout_width="342dp"
							android:layout_height="60dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/_bg__login_ek2_shape" />

						<View
							android:id="@+id/rectangle_2"
							android:layout_width="342dp"
							android:layout_height="60dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_2_ek2_shape" />

						<TextView
							android:id="@+id/get_started_string1"
							android:layout_width="146dp"
							android:layout_height="24.6dp"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginLeft="99dp"
							android:layout_marginTop="20dp"
							android:gravity="center"
							android:text="Continue"
							android:textColor="#FFFFFF"
							android:textSize="16sp"
							android:textStyle="bold" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/tracker_progress"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp">

					<View
						android:id="@+id/_bg__tracker_progress_ek1"
						android:layout_width="391dp"
						android:layout_height="98dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/_bg__tracker_progress_ek1_shape" />


					<RelativeLayout
						android:id="@+id/frame"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="24dp"
						android:layout_marginTop="64dp">

						<View
							android:id="@+id/_bg__frame_ek1"
							android:layout_width="24dp"
							android:layout_height="24dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/_bg__login_ek2_shape" />

						<ImageView
							android:id="@+id/Frame"
							android:layout_width="30dp"
							android:layout_height="20dp"
							android:layout_marginTop="1dp"
							android:contentDescription="Frame"
							android:src="@drawable/back" />




					</RelativeLayout>


					<RelativeLayout
						android:id="@+id/group_40"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="80dp"
						android:layout_marginTop="74dp">

						<View
							android:id="@+id/_bg__group_40_ek1"
							android:layout_width="230dp"
							android:layout_height="4dp"
							android:layout_marginStart="-80dp"
							android:layout_marginTop="-74dp"
							android:background="@drawable/_bg__group_40_ek1_shape" />

						<View
							android:id="@+id/rectangle_24"
							android:layout_width="40dp"
							android:layout_height="4dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_24_shape" />

						<View
							android:id="@+id/rectangle_25"
							android:layout_width="40dp"
							android:layout_height="4dp"
							android:layout_marginStart="48dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_25_shape" />

						<View
							android:id="@+id/rectangle_26"
							android:layout_width="40dp"
							android:layout_height="4dp"
							android:layout_marginStart="96dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_26_shape" />

						<View
							android:id="@+id/rectangle_28"
							android:layout_width="40dp"
							android:layout_height="4dp"
							android:layout_marginStart="144dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_28_shape" />

						<View
							android:id="@+id/rectangle_29"
							android:layout_width="38dp"
							android:layout_height="4dp"
							android:layout_marginStart="192dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_26_shape" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_71"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="24dp"
					android:layout_marginTop="190dp">

					<RelativeLayout
						android:id="@+id/radio_buttons"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="25dp">

						<View
							android:id="@+id/_bg__radio_buttons_ek1"
							android:layout_width="342dp"
							android:layout_height="48dp"
							android:layout_marginStart="-1dp"
							android:layout_marginTop="-1dp"
							android:background="@drawable/_bg__radio_buttons_ek1_shape" />

						<TextView
							android:id="@+id/single_account"
							android:layout_width="283.4dp"
							android:layout_height="23.4dp"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="14.5dp"
							android:text="@string/single_account_string"
							android:textColor="#000000"
							android:textSize="14sp" />


						<RelativeLayout
							android:id="@+id/confirm"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="302dp"
							android:layout_marginTop="12dp"/>

					</RelativeLayout>


					<RelativeLayout
						android:id="@+id/confirm_ek2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="303dp"
						android:layout_marginTop="205dp">

						<CheckBox
							android:id="@+id/checkbox"
							android:layout_width="24dp"
							android:layout_height="24dp"
							android:layout_marginStart="301dp"
							android:layout_marginTop="11dp"
							android:button="@drawable/checkbox_selector" />


					</RelativeLayout>


					<RelativeLayout
						android:id="@+id/radio_buttons_ek2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="81dp">

						<View
							android:id="@+id/_bg__radio_buttons_ek3"
							android:layout_width="342dp"
							android:layout_height="48dp"
							android:layout_marginStart="-1dp"
							android:layout_marginTop="-1dp"
							android:background="@drawable/_bg__radio_buttons_ek3_shape" />

						<TextView
							android:id="@+id/joint_account"
							android:layout_width="283.4dp"
							android:layout_height="23.4dp"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="14.5dp"
							android:text="@string/joint_account_string"
							android:textColor="#000000"
							android:textSize="14sp" />

						<View
							android:id="@+id/ellipse_17"
							android:layout_width="24dp"
							android:layout_height="24dp"
							android:layout_marginStart="301dp"
							android:layout_marginTop="11dp"
							android:background="@drawable/ellipse_17_shape"
							android:clickable="true" />

					</RelativeLayout>

					<View
						android:id="@+id/ellipse_17_ek1"
						android:layout_width="24dp"
						android:layout_height="24dp"
						android:layout_marginStart="301dp"
						android:layout_marginTop="35dp"
						android:background="@drawable/ellipse_17_ek1_shape" />

					<TextView
						android:id="@+id/i_m_looking_for_a"
						android:layout_width="121.4dp"
						android:layout_height="23.4dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:text="@string/i_m_looking_for_a_string"
						android:textColor="#000000"
						android:textSize="14sp"
						android:textStyle="bold" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/radio_buttons_ek4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="24dp"
					android:layout_marginTop="383dp">

					<View
						android:id="@+id/_bg__radio_buttons_ek5"
						android:layout_width="342dp"
						android:layout_height="48dp"
						android:layout_marginStart="-1dp"
						android:layout_marginTop="-1dp"
						android:background="@drawable/_bg__radio_buttons_ek5_shape" />

					<TextView
						android:id="@+id/joint_account_ek1"
						android:layout_width="283.4dp"
						android:layout_height="23.4dp"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="14.5dp"
						android:text="@string/joint_account_ek1_string"
						android:textColor="#000000"
						android:textSize="14sp" />

					<View
						android:id="@+id/ellipse_17_ek2"
						android:layout_width="24dp"
						android:layout_height="24dp"
						android:layout_marginStart="301dp"
						android:layout_marginTop="11dp"
						android:background="@drawable/ellipse_17_ek2_shape" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/radio_buttons_ek6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="24dp"
					android:layout_marginTop="439dp">

					<View
						android:id="@+id/_bg__radio_buttons_ek7"
						android:layout_width="342dp"
						android:layout_height="48dp"
						android:layout_marginStart="-1dp"
						android:layout_marginTop="-1dp"
						android:background="@drawable/_bg__radio_buttons_ek7_shape" />

					<TextView
						android:id="@+id/joint_account_ek2"
						android:layout_width="283.4dp"
						android:layout_height="23.4dp"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="14.5dp"
						android:text="@string/joint_account_ek2_string"
						android:textColor="#000000"
						android:textSize="14sp" />

					<View
						android:id="@+id/ellipse_17_ek3"
						android:layout_width="24dp"
						android:layout_height="24dp"
						android:layout_marginStart="301dp"
						android:layout_marginTop="11dp"
						android:background="@drawable/ellipse_17_ek3_shape" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/radio_buttons_ek8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="24dp"
					android:layout_marginTop="327dp">

					<View
						android:id="@+id/_bg__radio_buttons_ek9"
						android:layout_width="342dp"
						android:layout_height="48dp"
						android:layout_marginStart="-1dp"
						android:layout_marginTop="-1dp"
						android:background="@drawable/_bg__radio_buttons_ek9_shape" />

					<TextView
						android:id="@+id/joint_account_ek3"
						android:layout_width="283.4dp"
						android:layout_height="23.4dp"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="14.5dp"
						android:text="@string/joint_account_ek3_string"
						android:textColor="#000000"
						android:textSize="14sp" />
					<View
						android:id="@+id/ellipse_17_ek3"
						android:layout_width="24dp"
						android:layout_height="24dp"
						android:layout_marginStart="301dp"
						android:layout_marginTop="11dp"
						android:background="@drawable/ellipse_17_ek3_shape"
						tools:ignore="DuplicateIds" />

					<CheckBox
						android:id="@+id/checkbox_selector"
						android:layout_width="24dp"
						android:layout_height="24dp"
						android:layout_marginStart="301dp"
						android:layout_marginTop="11dp"
						android:button="@drawable/checkbox_selector" />

				</RelativeLayout>

		</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>